# codex-skills

./: README.md  SKILL.md
Aut_Sci_ppt-main/: LICENSE  README.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt
Aut_Sci_ppt-main/references/: rules.md  style-spec.md
Aut_Sci_ppt-main/src/aut_sci_ppt/: USER_GUIDE.md  __init__.py  agent.py  config.py  interactive.py  layout_engine.py  models.py  paper_workflow.py  pdf_extractor.py  quick_start.py  run.py  test.py
Aut_Sci_ppt-main/src/aut_sci_ppt/generator/: formula_renderer.py  pptx_generator.py
Aut_Sci_ppt-main/src/aut_sci_ppt/image/: handler.py
Aut_Sci_ppt-main/src/aut_sci_ppt/paginator/: __init__.py  smart_paginator.py
Aut_Sci_ppt-main/src/aut_sci_ppt/parser/: ai_parser.py  text_parser.py
Aut_Sci_ppt-main/src/aut_sci_ppt/templates/: __init__.py  base.py  content_detail.py  content_detail_image.py  content_figure.py  content_list.py  cover.py  ending.py  section.py  timeline.py  toc.py
Aut_Sci_ppt-main/src/aut_sci_ppt/tests/: test_agent.py
Beamer_PPT_Skill/: LICENSE  README.md  README_zh.md  SKILL.md
academic-pptx-skill-main/: README.md
beautiful_deck/: SKILL.md
r-analyst/: SKILL.md
references/: JAR_62_1_bdsy_banerjee_etal.do  JAR_62_1_bhs_bouwens_etal.do  JAR_62_1_gsz_gu_sun_zhou.do  JAR_62_2_dgzz_defranco_etal.do  JAR_62_2_gmp_grewal_etal.do  JAR_62_2_xyz_xin_etal.do  JAR_62_3_bht_bloomfield_etal.do  JAR_62_3_ccz_cheynel_etal.do  JAR_62_3_kim.do  JAR_62_3_rr_raghunandan_ruchti.do  JAR_62_4_bd_breuer_dehaan.do  JAR_62_4_kmsv_kohler_etal.do  JAR_62_4_mps_marra_etal.do  JAR_62_4_xu.do  (+21 more)
(+177 files in other folders)
